# django-firebase-auth-vue-3-example

backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/users/: authentication.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package.json
frontend/src/: App.vue  main.ts
